[package]
name = "gaben"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "./src/lib/mod.rs"
doc = false


[dependencies]
anyhow = "1.0.81"
enigo = "0.1.3"
inputbot = "0.6.0"
strum = "0.26.2"
strum_macros = "0.26.2"
sysinfo = "0.30.7"
winput = "0.2.5"
ambassador = "0.3.6"
derive-getters = "0.3.0"
rand = "0.8.5"

[dependencies.windows]
version = "0.54.0"
features = [
	"Win32_Foundation",
	"Win32_System",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_ProcessStatus",
	"Win32_System_Threading"
]
