[workspace]
members = [
	"gaben",
	"sdk",
	"macros", 
	"pdm",
]

[workspace.dependencies]
derive-getters = "0.3.0"
derive_builder = "0.20.0"
log = "0.4.21"
env_logger = "0.11.3"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }
litcrypt = "0.3.0"
sysinfo = "0.30.7"

[profile.release]
panic = "abort"
lto = true

[profile.release.package.pdm]
strip = true

[profile.release.package.gaben]
strip = true
opt-level = 3
