[package]
name = "gaben"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
rand = "0.8.5"
derive-getters = { workspace = true }
log = { workspace = true }
sdk = { path = "../sdk", features = ["all"] }
macros = { path = "../macros" }

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "GABEN.EXE"
LegalCopyright = "Copyright © 2024"
FileDescription="¯\\_(ツ)_/¯"
ProductName="gaben"
ProductVersion="1.0.0"
