[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
strum = { workspace = true }
strum_macros = { workspace = true }
sdk = { path = "../sdk", features = ["logger", "utils"] }
derive_builder = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
litcrypt = { workspace = true }

[dependencies.windows]
version = "0.56.0"
features = ["Win32_UI_WindowsAndMessaging"]

[build-dependencies]
winres= "0.1.12"

[package.metadata.winres]
OriginalFilename = "GABEN-INSTALLER.EXE"
LegalCopyright = "Copyright © 2024"
FileDescription="🤥"
ProductName="gaben"
ProductVersion="1.3.0"
