[package]
name = "pdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../sdk", features = ["logger", "memory"] }
litcrypt = { workspace = true }
tokio = { workspace = true }
winreg = "0.52.0"
goldberg = "0.1.0"

[dependencies.windows]
version = "0.56.0"
features = ["Win32_UI_WindowsAndMessaging"]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileVersion = "1.5.0"
ProductVersion = "1.5.0"
OriginalFilename = "gaben.exe"
FileDescription = "gabenworks"
LegalCopyright = "Copyright © 2016"
