[package]
name = "portable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../sdk", features = ["logger"] }

[dependencies.windows]
version = "0.56.0"
features = ["Win32_UI_WindowsAndMessaging"]

[build-dependencies]
winres = "0.1.12"
