[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[features]
game = []
inputs = []
memory = []
offsets = []
punishments = []
time = []
types = []
utils = []
logger = []
all = ["game", "inputs", "memory", "offsets", "punishments", "time", "types", "utils", "logger"]

[dependencies]
inputbot = "0.6.0"
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo = "0.30.7"
ambassador = "0.3.6"
derive-getters = { workspace = true }
derive_builder = { workspace = true }
rand = "0.8.5"
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
winreg = "0.52.0"

[dependencies.windows]
version = "0.56.0"
features = [
	"Win32_Foundation",
	"Win32_System",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_ProcessStatus",
	"Win32_System_Threading"
]
